--- a/templeinn/paysonclosure.html
+++ b/templeinn/paysonclosure.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Layton Temple Ordinances Schedule</title>
-    <meta name="description" content="Ogden temple ordinance schedule and temple closures" />
+    <title>Payson Temple closure Schedule</title>
+    <meta name="description" content="Payson temple closure schedule." />
 
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -48,30 +48,41 @@
 
     <!-- CONTENT HERE -->
     <main>
-        <div id="">
+        <div>
             <div class="page-intro">
-                <h2>Temple Ordinance Schedule</h2>
-                <p>The Temple Inn and Suits wants to help you make your temple experience and attendance
-                    go as smoothly as possible. To help you prepare for your temple attendance we offer
-                    helpful information about the following temples that are located closest to our hotels.</p>
+                <h2>Temple Closure Schedule</h2>
+                <p>The dates for temple closure are provided to help as you make plans to attend
+                    the temple, but are subject to change when necessary.
+                </p>
             </div>
             <div>
                 <div id="back-button">
                     <a href="temples.html">
                         <-Back to Temples </a>
                 </div>
-
-
-
             </div>
-            <div class="quote">
-                <h3>Temple Quote</h3>
-                <p> "There are more temples across the earth than there have ever been. More people in all the world
-                    have felt the Spirit of Elijah move them to record the identities and facts of their ancestors'
-                    lives."
-                    —Henry B. Eyring
-                </p>
+            <div class="main-divs">
+                <div class="t-cards">
+                    <div class="cards">
+                        <img class="all-images" src="images/PaysonUtahTemple.jpg" alt="Payson Temple">
+                    </div>
+                    <h2>Payson</h2>
+                    <div class="closureInfo"></div>
+                </div>
             </div>
+        </div>
+
+
+
+        </div>
+        <div class="quote">
+            <h3>Temple Quote</h3>
+            <p> "There are more temples across the earth than there have ever been. More people in all the world
+                have felt the Spirit of Elijah move them to record the identities and facts of their ancestors'
+                lives."
+                —Henry B. Eyring
+            </p>
+        </div>
 
     </main>
     <!-- FOOTER HERE -->
@@ -121,7 +132,7 @@
         </p>
     </footer>
     <script src="js/main.js"></script>
-    <script src="js/laytonschedule.js"></script>
+    <script src="js/templeclosure.js"></script>
 </body>
 
 </html>
