--- a/templeinn/saratogaschedule.html
+++ b/templeinn/saratogaschedule.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saratoga Springs Temple Ordinances Schedule</title>
-    <meta name="description" content="Saratoga Springs temple ordinance schedule and temple closures" />
+    <meta name="description" content="Saratoga Springs temple ordinance schedule." />
 
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -60,16 +60,16 @@
                     <a href="temples.html">
                         <-Back to Temples </a>
                 </div>
-                <div>
-                    <img src="images/SaratogaSpringsUtahTemple.jpg" alt="Saratoga Springs Temple">
-                    <div class="groups"></div>
+                <div class="main-divs">
+                    <div class="t-cards">
+                        <div class="cards">
+                            <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpg"
+                                alt="Saratoga Springs Temple">
+                        </div>
+                        <h2>Saratoga Springs</h2>
+                        <div class="scheduleInfo"></div>
+                    </div>
                 </div>
-                <div>
-                    <div class=""></div>
-                </div>
-
-
-
             </div>
             <div class="quote">
                 <h3>Temple Quote</h3>
