--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -72,13 +72,12 @@
                     <h3>E-mail</h3>
                     <p>saratogaspringsutahtemple@lds.org</p>
                     <h3>Services: </h3>
-                    <p>Services: Clothing rental, No cafeteria, NO patron housing,
-                        No distribution center nearby</p>
+                    <p>Services: Clothing rental, No cafeteria, No patron housing,
+                        Distribution center nearby</p>
                     <h3>History: </h3>
                     <p><b>Announcement:</b> 2 April 2017</p>
-                    <p><b>Announcement:</b> 2 April 2017</p>
-                    <p><b>Groundbreaking:</b> 19 October 2019 by Craig C. Christensen</p>
-                    <p><b>Dedication:</b> Estimated completion in late 2022</p>
+                    <p><b>Groundbreaking:</b> 19 October 2019</p>
+                    <p><b>Dedication:</b> Estimated completion 2022</p>
                 </div>
                 <div class="templeBtn-grid">
                     <div class="temple-button1">
@@ -105,12 +104,12 @@
                     <h3>E-mail</h3>
                     <p>paysonutahtemple@lds.org</p>
                     <h3>Services:</h3>
-                    <p>Services: Clothing rental, NO cafeteria, NO patron housing,
+                    <p>Services: Clothing rental, No cafeteria, No patron housing,
                         Distribution center nearby</p>
                     <h3>History:</h3>
                     <p><b>Announcement:</b> 25 January 2010</p>
                     <p><b>Announcement:</b> 25 January 2010</p>
-                    <p><b>Dedication:</b> 7 June 2015 by Henry B. Eyring</p>
+                    <p><b>Dedication:</b> 7 June 2015</p>
                 </div>
                 <div class="templeBtn-grid">
                     <div class="temple-button1">
@@ -137,12 +136,12 @@
                     <h3>E-mail</h3>
                     <p>ogdenutahtemple@lds.org</p>
                     <h3>Services:</h3>
-                    <p>Services: Clothing rental, NO cafeteria, NO patron housing,
+                    <p>Services: Clothing rental, No cafeteria, No patron housing,
                         Distribution center nearby</p>
                     <h3>History:</h3>
                     <p><b>Announcement:</b> 24 August 1967</p>
                     <p><b>Announcement:</b> 24 August 1967</p>
-                    <p><b>Dedication:</b> 18–20 January 1972 by Joseph Fielding Smith</p>
+                    <p><b>Dedication:</b> 18–20 January 1972</p>
                 </div>
                 <div class="templeBtn-grid">
                     <div class="temple-button1">
@@ -169,19 +168,19 @@
                     <h3>E-mail</h3>
                     <p>laytonutahtemple@lds.org</p>
                     <h3>Services:</h3>
-                    <p>Services: Clothing rental, No cafeteria, NO patron housing,
-                        No distribution center nearby</p>
+                    <p>Services: Clothing rental, No cafeteria, No patron housing,
+                        Distribution center nearby</p>
                     <h3>History:</h3>
                     <p><b>Announcement:</b> 1 April 2018</p>
-                    <p><b>Groundbreaking:</b> 23 May 2020 by Craig C. Christensen</p>
-                    <p><b>Dedication:</b> Estimated completion in early 2023</p>
+                    <p><b>Groundbreaking:</b> 23 May 2020</p>
+                    <p><b>Dedication:</b> Estimated completion 2023</p>
                 </div>
                 <div class="templeBtn-grid">
                     <div class="temple-button1">
                         <a href="laytonschedule.html">Temple Schedule</a>
                     </div>
                     <div class="temple-button2">
-                        <a href="laytonsclosure.html">Temple Closures</a>
+                        <a href="laytonclosure.html">Temple Closures</a>
                     </div>
                 </div>
             </div>
