--- a/templeinn/laytonschedule.html
+++ b/templeinn/laytonschedule.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Layton Temple Ordinances Schedule</title>
-    <meta name="description" content="Ogden temple ordinance schedule and temple closures" />
+    <meta name="description" content="Layton temple ordinance schedule." />
 
     <link rel="shortcut icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -51,26 +51,35 @@
         <div id="">
             <div class="page-intro">
                 <h2>Temple Ordinance Schedule</h2>
-                <p>The Temple Inn and Suits wants to help you make your temple experience and attendance
-                    go as smoothly as possible. To help you prepare for your temple attendance we offer
-                    helpful information about the following temples that are located closest to our hotels.</p>
+                <p>Temple schedule is subject to change when needed. If you desire to go through the temple
+                    for a live ordinances please call the temple to arrange an appointment.
+                </p>
             </div>
             <div>
                 <div id="back-button">
                     <a href="temples.html">
                         <-Back to Temples </a>
                 </div>
-
-
-
+                <div class="main-divs">
+                    <div class="t-cards">
+                        <div class="cards">
+                            <img class="all-images" src="images/LaytonUtahTemple.jpg" alt="Layton Temple">
+                        </div>
+                        <h2>Layton</h2>
+                        <div class="scheduleInfo"></div>
+                    </div>
+                </div>
             </div>
-            <div class="quote">
-                <h3>Temple Quote</h3>
-                <p>"I want to see the temple built in a manner that it will endure through the Millennium.
-                    This is not the only temple we shall build; there will be hundreds of them built and
-                    dedicated to the Lord."
-                    —Brigham Young</p>
-            </div>
+
+
+        </div>
+        <div class="quote">
+            <h3>Temple Quote</h3>
+            <p>"I want to see the temple built in a manner that it will endure through the Millennium.
+                This is not the only temple we shall build; there will be hundreds of them built and
+                dedicated to the Lord."
+                —Brigham Young</p>
+        </div>
 
     </main>
     <!-- FOOTER HERE -->
@@ -120,7 +129,7 @@
         </p>
     </footer>
     <script src="js/main.js"></script>
-    <script src="js/laytonschedule.js"></script>
+    <script src="js/templeschedule.js"></script>
 </body>
 
 </html>
