--- a/templeinn/ogdenschedule.html
+++ b/templeinn/ogdenschedule.html
@@ -51,26 +51,35 @@
         <div id="">
             <div class="page-intro">
                 <h2>Temple Ordinance Schedule</h2>
-                <p>The Temple Inn and Suits wants to help you make your temple experience and attendance
-                    go as smoothly as possible. To help you prepare for your temple attendance we offer
-                    helpful information about the following temples that are located closest to our hotels.</p>
+                <p>Temple schedule is subject to change when needed. If you desire to go through the temple
+                    for a live Ordinances please call the temple to arrange an appointment.
+                </p>
             </div>
             <div>
                 <div id="back-button">
                     <a href="temples.html">
                         <-Back to Temples </a>
                 </div>
-
-
-
+                <div class="main-divs">
+                    <div class="t-cards">
+                        <div class="cards">
+                            <img class="all-images" src="images/OgdenUtahTemple.jpg" alt="Layton Temple">
+                        </div>
+                        <h2>Ogden</h2>
+                        <div class="scheduleInfo"></div>
+                    </div>
+                </div>
             </div>
-            <div class="quote">
-                <h3>Temple Quote</h3>
-                <p>"I want to see the temple built in a manner that it will endure through the Millennium.
-                    This is not the only temple we shall build; there will be hundreds of them built and
-                    dedicated to the Lord."
-                    —Brigham Young</p>
-            </div>
+
+
+        </div>
+        <div class="quote">
+            <h3>Temple Quote</h3>
+            <p>"I want to see the temple built in a manner that it will endure through the Millennium.
+                This is not the only temple we shall build; there will be hundreds of them built and
+                dedicated to the Lord."
+                —Brigham Young</p>
+        </div>
         </div>
     </main>
     <!-- FOOTER HERE -->
@@ -120,6 +129,7 @@
         </p>
     </footer>
     <script src="js/main.js"></script>
+    <script src="js/templeschedule.js"></script>
 </body>
 
 </html>
