--- a/templeinn/laytonclosure.html
+++ b/templeinn/laytonclosure.html
@@ -61,7 +61,7 @@
                         <-Back to Temples </a>
                 </div>
             </div>
-            <div class="main-divs">
+            <div class="main-divs" id="json-divs">
                 <div class="t-cards">
                     <div class="cards">
                         <img class="all-images" src="images/LaytonUtahTemple.jpg" alt="Layton Temple">
