--- a/templeinn/ogdenschedule.html
+++ b/templeinn/ogdenschedule.html
@@ -60,7 +60,7 @@
                     <a href="temples.html">
                         <-Back to Temples </a>
                 </div>
-                <div class="main-divs">
+                <div class="main-divs" id="json-divs">
                     <div class="t-cards">
                         <div class="cards">
                             <img class="all-images" src="images/OgdenUtahTemple.jpg" alt="Layton Temple">
