--- a/templeinn/resources.html
+++ b/templeinn/resources.html
@@ -52,57 +52,69 @@
             <div>
                 <h2>Resoruces</h2>
                 <h3>Home Page</h3>
-                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/news/">Saratoga Springs
-                    Utah Temple Image</a>
-                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah
-                    Temple
-                    Information</a><br>
-                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah
-                    Temple
-                    Photo</a><br>
+                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/news/">
+                    Saratoga Springs Utah Temple Image</a><br>
+                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">
+                    Saratoga Springs Utah Temple Information</a><br>
+                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">
+                    Saratoga Springs Utah Temple Photo</a><br>
                 <a href="">Current Weather Conditions</a><br>
                 <a href="">Three Day Weather Forecast</a>
             </div>
+
+
             <div>
                 <h3>Temples Page</h3>
                 <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">Saratoga Springs Utah
                     Temple Image</a><br>
+                <a href="https://churchofjesuschristtemples.org/saratoga-springs-utah-temple/">
+                    Saratoga Springs Utah Temple Information</a><br>
                 <a href="https://churchofjesuschristtemples.org/payson-utah-temple/">Payson Utah Temple Image</a><br>
+                <a href="https://churchofjesuschristtemples.org/payson-utah-temple/">Payson Utah Temple
+                    Infomration</a><br>
                 <a href="https://churchofjesuschristtemples.org/ogden-utah-temple/">Ogden Utah Temple Image</a><br>
-                <a href="https://churchofjesuschristtemples.org/layton-utah-temple/">Layton Utah Temple Image</a><br>
-            </div>
-            <div>
-                <h3>Temple Ordinance Schedule Page</h3>
-                <a href="https://churchofjesuschristtemples.org/temples/schedules/">Saratoga Springs Utah
-                    Temple Information</a><br>
-            </div>
-            <div>
-                <h3>Temple Closure Page</h3>
-                <a href="https://churchofjesuschristtemples.org/temples/schedules/">Payson Utah Temple
-                    Information</a><br>
-            </div>
-            <div>
-                <h3>Ogden Temple Page</h3>
                 <a href="https://churchofjesuschristtemples.org/ogden-utah-temple/">Ogden Utah Temple
                     Information</a><br>
-            </div>
-            <div>
-                <h3>Payton Temple Page</h3>
+                <a href="https://churchofjesuschristtemples.org/layton-utah-temple/">Layton Utah Temple Image</a><br>
                 <a href="https://churchofjesuschristtemples.org/layton-utah-temple/">Layton Utah Temple
                     Information</a><br>
             </div>
+
+
+            <div>
+                <h3>Temple Ordinance Schedule Pages</h3>
+                <a href="https://churchofjesuschristtemples.org/temples/schedules/">Saratoga Springs Utah
+                    Temple Information</a><br>
+            </div>
+
+
+            <div>
+                <h3>Temple Closure Pages</h3>
+                <a href="https://churchofjesuschristtemples.org/temples/schedules/">Payson Utah Temple
+                    Information</a><br>
+            </div>
+
+
             <div>
                 <h3>Services Page</h3>
             </div>
+
+
             <div>
                 <h3>Reservations Page</h3>
             </div>
+
+
             <div>
                 <h3>Full-Time Missionaries Page</h3>
             </div>
+
+
             <div>
                 <h3>Contact Page</h3>
             </div>
+
+
             <div>
                 <h3>Form Conformation Pages</h3>
             </div>
