--- a/templeinn/saratogaschedule.html
+++ b/templeinn/saratogaschedule.html
@@ -48,7 +48,7 @@
 
     <!-- CONTENT HERE -->
     <main>
-        <div id="">
+        <div>
             <div class="page-intro">
                 <h2>Temple Ordinance Schedule</h2>
                 <p>Temple schedule is subject to change when needed. If you desire to go through the temple
@@ -60,7 +60,7 @@
                     <a href="temples.html">
                         <-Back to Temples </a>
                 </div>
-                <div class="main-divs">
+                <div class="main-divs" id="json-divs">
                     <div class="t-cards">
                         <div class="cards">
                             <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpg"
