--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -77,7 +77,7 @@
                     <h3>History: </h3>
                     <p><b>Announcement:</b> 2 April 2017</p>
                     <p><b>Groundbreaking:</b> 19 October 2019</p>
-                    <p><b>Dedication:</b> Estimated completion 2022</p>
+                    <p><b>Dedication:</b> Completion 2022</p>
                 </div>
                 <div class="templeBtn-grid">
                     <div class="temple-button1">
@@ -173,7 +173,7 @@
                     <h3>History:</h3>
                     <p><b>Announcement:</b> 1 April 2018</p>
                     <p><b>Groundbreaking:</b> 23 May 2020</p>
-                    <p><b>Dedication:</b> Estimated completion 2023</p>
+                    <p><b>Dedication:</b> Completion 2023</p>
                 </div>
                 <div class="templeBtn-grid">
                     <div class="temple-button1">
