--- a/templeinn/temples.html
+++ b/templeinn/temples.html
@@ -62,6 +62,10 @@
                     <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpg"
                         alt="Saratoga Springs Utah Temple">
                 </div>
+                <div>
+                    <p class="likeBtn"><button onclick="clickCounterSaratoga()" type="button">&#128151;</button></p>
+                    <div id="resultSaratoga"></div>
+                </div>
                 <div class="templeInfo">
                     <h2>Saratoga Springs</h2>
                     <h3>Address</h3>
@@ -70,14 +74,14 @@
                     <h3>Phone Number</h3>
                     <p>(801) 000-0000</p>
                     <h3>E-mail</h3>
-                    <p>saratogaspringsutahtemple@lds.org</p>
+                    <p>saratogautahtemple@lds.org</p>
                     <h3>Services: </h3>
                     <p>Services: Clothing rental, No cafeteria, No patron housing,
                         Distribution center nearby</p>
                     <h3>History: </h3>
-                    <p><b>Announcement:</b> 2 April 2017</p>
-                    <p><b>Groundbreaking:</b> 19 October 2019</p>
-                    <p><b>Dedication:</b> Completion 2022</p>
+                    <p><b>Announcement:</b><br> 2 April 2017</p>
+                    <p><b>Groundbreaking:</b><br> 19 October 2019</p>
+                    <p><b>Dedication:</b><br>Completion 2022</p>
                 </div>
                 <div class="templeBtn-grid">
                     <div class="temple-button1">
@@ -94,6 +98,10 @@
                 <div class="cards">
                     <img class="all-images" src="images/PaysonUtahTemple.jpg" alt="Payson Utah Temple">
                 </div>
+                <div>
+                    <p class="likeBtn"><button onclick="clickCounterPayson()" type="button">&#128151;</button></p>
+                    <div id="resultPayson"></div>
+                </div>
                 <div class="templeInfo">
                     <h2>Payson</h2>
                     <h3>Address:</h3>
@@ -107,9 +115,9 @@
                     <p>Services: Clothing rental, No cafeteria, No patron housing,
                         Distribution center nearby</p>
                     <h3>History:</h3>
-                    <p><b>Announcement:</b> 25 January 2010</p>
-                    <p><b>Announcement:</b> 25 January 2010</p>
-                    <p><b>Dedication:</b> 7 June 2015</p>
+                    <p><b>Announcement:</b><br> 25 January 2010</p>
+                    <p><b>Announcement:</b><br> 25 January 2010</p>
+                    <p><b>Dedication:</b><br> 7 June 2015</p>
                 </div>
                 <div class="templeBtn-grid">
                     <div class="temple-button1">
@@ -126,6 +134,10 @@
                 <div class="cards">
                     <img class="all-images" src="images/OgdenUtahTemple.jpg" alt="Ogden Utah Temple">
                 </div>
+                <div>
+                    <p class="likeBtn"><button onclick="clickCounterOgden()" type="button">&#128151;</button></p>
+                    <div id="resultOgden"></div>
+                </div>
                 <div class="templeInfo">
                     <h2>Ogden</h2>
                     <h3>Address:</h3>
@@ -139,9 +151,9 @@
                     <p>Services: Clothing rental, No cafeteria, No patron housing,
                         Distribution center nearby</p>
                     <h3>History:</h3>
-                    <p><b>Announcement:</b> 24 August 1967</p>
-                    <p><b>Announcement:</b> 24 August 1967</p>
-                    <p><b>Dedication:</b> 18–20 January 1972</p>
+                    <p><b>Announcement:</b><br> 24 August 1967</p>
+                    <p><b>Announcement:</b><br> 24 August 1967</p>
+                    <p><b>Dedication:</b><br> 18 January 1972</p>
                 </div>
                 <div class="templeBtn-grid">
                     <div class="temple-button1">
@@ -151,12 +163,19 @@
                         <a href="ogdenclosure.html">Temple Closures</a>
                     </div>
                 </div>
+                <div>
+                    <div></div>
+                </div>
             </div>
 
 
             <div class="t-cards">
                 <div class="cards">
                     <img class="all-images" src="images/LaytonUtahTemple.jpg" alt="Layton Utah Temple">
+                </div>
+                <div>
+                    <p class="likeBtn"><button onclick="clickCounterLayton()" type="button">&#128151;</button></p>
+                    <div id="resultLayton"></div>
                 </div>
                 <div class="templeInfo">
                     <h2>Layton</h2>
@@ -171,9 +190,9 @@
                     <p>Services: Clothing rental, No cafeteria, No patron housing,
                         Distribution center nearby</p>
                     <h3>History:</h3>
-                    <p><b>Announcement:</b> 1 April 2018</p>
-                    <p><b>Groundbreaking:</b> 23 May 2020</p>
-                    <p><b>Dedication:</b> Completion 2023</p>
+                    <p><b>Announcement:</b><br> 1 April 2018</p>
+                    <p><b>Groundbreaking:</b><br> 23 May 2020</p>
+                    <p><b>Dedication:</b><br> Completion 2023</p>
                 </div>
                 <div class="templeBtn-grid">
                     <div class="temple-button1">
@@ -240,6 +259,7 @@
         </p>
     </footer>
     <script src="js/main.js"></script>
+    <script src="js/likebutton.js"></script>
 </body>
 
 </html>
