--- a/templeinn/paysonschedule.html
+++ b/templeinn/paysonschedule.html
@@ -48,7 +48,7 @@
 
     <!-- CONTENT HERE -->
     <main>
-        <div id="">
+        <div>
             <div class="page-intro">
                 <h2>Temple Ordinance Schedule</h2>
                 <p>Temple schedule is subject to change when needed. If you desire to go through the temple
