--- a/templeinn/reservations.html
+++ b/templeinn/reservations.html
@@ -243,7 +243,8 @@
                     <textarea name="comments" id="commentBox" cols="60" rows="10">Comment here...</textarea>
                 </div>
                 <div>
-                    <input type="submit" value="submit room request" class="submitForm">
+                    <input type="submit" value="Submit Room Request" class="submitForm">
+                    <a href="thanks.html"></a>
                 </div>
             </form>
         </div>
