--- a/templeinn/resources.html
+++ b/templeinn/resources.html
@@ -97,16 +97,33 @@
 
             <div>
                 <h3>Services Page</h3>
+                <a href="https://www.pexels.com/photo/luxurious-pool-in-private-villa-4117984/">Indoor Pool Picute</a>
+                <a href="https://www.pexels.com/photo/a-cafeteria-with-a-modern-interior-9306208/">Hotel eating area</a>
+                <a href="https://www.pexels.com/photo/stainless-steel-sink-with-faucet-9139206/">Small Kitchen
+                    Picture</a>
+                <a href="https://unsplash.com/photos/Wj6oZNCAzs4">Small Kitchen Picture</a>
+                <a href="https://unsplash.com/photos/LOA2mTj1vhc">Hotel Gym</a>
+                <a href="https://www.pexels.com/photo/girl-in-red-dress-playing-a-wooden-blocks-3662667/">Child Care
+                    Picture</a>
+                <a href="https://www.pexels.com/photo/tables-with-flower-decors-2306281/">Wedding Reception Picture</a>
+            </div>
+
+            <div>
+                <h3>Reseptions Page</h3>
+                <a href="https://www.pexels.com/photo/two-table-with-eight-chairs-inside-room-1030979/">Reception
+                    Table Picture</a>
             </div>
 
 
             <div>
                 <h3>Reservations Page</h3>
+                <a href="https://unsplash.com/photos/GUno-FetWJM">Hotel Bedroom Picture</a>
             </div>
 
 
             <div>
                 <h3>Full-Time Missionaries Page</h3>
+                <a href="https://unsplash.com/photos/MP0bgaS_d1c">Kitchenette Picture</a>
             </div>
 
 
@@ -140,7 +157,7 @@
                 <p>
                     4800 Montgomery Ln #300<br>
                     Bethesda, MD 20814<br><br>
-                    <a href="https://goo.gl/maps/7t7mKauFCyAYHscX8">
+                    <a href="https://goo.gl/maps/8Mo8UVxi4hEzDbpu5">
                         <i class="material-icons">&#xe567;</i>Location Map</a>
                 </p>
                 <br>
