--- a/templeinn/services.html
+++ b/templeinn/services.html
@@ -49,7 +49,88 @@
 
     <!-- CONTENT HERE -->
     <main>
-        <h2>Services</h2>
+        <div class="page-intro">
+            <h2>Offered Services</h2>
+            <p>At the Temple Inn and Suites we want you to provide you with the best possible experience
+                during as you plan your trip to the temple. That's why we offer specialized services that
+                will make your stay with us easy and as comfortable as possible.
+            </p>
+        </div>
+
+
+        <div class="main-divs">
+            <div class="t-cards" id="amenities">
+                <div id="amenities-grid">
+                    <div id="amenities-list">
+                        <h2>Provided Amenities</h2>
+                        <ul>
+                            <li>Breakfast</li>
+                            <li>Exercise Room</li>
+                            <li>Indoor Pool</li>
+                            <li>WiFi high-speed Internet Access</li>
+                            <li>Smart TV's</li>
+                            <li>Parking</li>
+                            <li>Temple Shuttle</li>
+                            <li>Family History Consultatant</li>
+                            <li>Family Ordinance Card Service</li>
+                        </ul>
+                    </div>
+                    <div id="image-grid">
+                        <div class="cards" id="am-img2">
+                            <img class="all-images" src="images/hotelpool.jpg" alt="Hotel Pool">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="t-cards">
+                <div id="specialized-grid">
+                    <div id="specialized-list">
+                        <h2>Specialized Services</h2>
+                        <ul>
+                            <li>Access to changing rooms and bathroom facilities for temple patrons who
+                                need to change to and from church clothes.
+                            </li>
+                            <li> Low-cost, short-term child care services with a playroom beautiful
+                                playroom for the children of patrons.
+                            </li>
+                            <li>Long-term living accommodations for full-time missionaries serving at the
+                                temple. These rooms feature a kitchenette and a small living room.
+                            </li>
+                            <li>A beautiful wedding reception hall that can be easily customized to fit the
+                                needs of the wedding party. We also offer a simple catering menu and kitchen
+                                access for food preparation and serving.
+                            </li>
+                            <li>A family search research center equipped with computers and friendly
+                                knowledgeable staff trained to assist you in your family search and
+                                ordinance work.</li>
+                        </ul>
+                    </div>
+                    <div class="cards">
+                        <img class="all-images" src="images/kitchenette.jpg" alt="Small Kitchenette">
+                    </div>
+                    <div class="cards">
+                        <img class="all-images" src="images/childcare.jpg" alt="Children Playing">
+                    </div>
+                    <div class="cards">
+                        <img class="all-images" src="images/reception1.jpg" alt="Reception Room">
+                    </div>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <h2>Learn more about our specialized services:</h2>
+                </div>
+                <div id="specializedBtns">
+                    <div id="special-Btn1">
+                        <a href="reception.html">Receptions</a>
+                    </div>
+                    <div id="special-Btn2">
+                        <a href="missionary.html">Full-Time Temple Missionaries</a>
+                    </div>
+                </div>
+            </div>
     </main>
     <!-- FOOTER HERE -->
     <footer>
@@ -71,7 +152,7 @@
                 <p>
                     4800 Montgomery Ln #300<br>
                     Bethesda, MD 20814<br><br>
-                    <a href="https://goo.gl/maps/7t7mKauFCyAYHscX8">
+                    <a href="https://goo.gl/maps/8Mo8UVxi4hEzDbpu5">
                         <i class="material-icons">&#xe567;</i>Location Map</a>
                 </p>
                 <br>
