--- a/templeinn/thanks.html
+++ b/templeinn/thanks.html
@@ -37,7 +37,7 @@
                 <li><a href="home.html">Home</a></li>
                 <li><a href="temples.html">Temples</a></li>
                 <li><a href="services.html">Services</a></li>
-                <li><a href="reservations.html" class="currentpage">Reservations</a></li>
+                <li><a href="reservations.html">Reservations</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
 
@@ -48,10 +48,35 @@
 
     <!-- CONTENT HERE -->
     <main>
-        <h2>Thank You</h2>
-        <p>Your reservation is complete. A conformation e-mail will be sent shortly to confirm your
-            reservation and provide details about your stay. If you have any questions or concerns
-            please feel free to contact us. Thank you for choosing the Temple Inn and Suites.</p>
+        <div class="page-intro">
+            <h2>Thank You</h2>
+            <p>Your reservation is complete. A conformation e-mail will be sent shortly to confirm your
+                reservation and provide details about your upcoming stay with us. If you have any questions or concerns
+                please feel free to contact us.<br><br> Thank you for choosing the Temple Inn and Suites.</p>
+        </div>
+        <div id="thanks-grid">
+            <div id="saratogaTemple">
+                <div class="cards">
+                    <img class="all-images" src="images/SaratogaSpringsUtahTemple.jpg"
+                        alt="Saratoga Springs Utah Temple">
+                </div>
+            </div>
+            <div id="paysonTemple">
+                <div class="cards">
+                    <img class="all-images" src="images/PaysonUtahTemple.jpg" alt="Payson Utah Temple">
+                </div>
+            </div>
+            <div id="ogdenTemple">
+                <div class="cards">
+                    <img class="all-images" src="images/OgdenUtahTemple.jpg" alt="Ogden Utah Temple">
+                </div>
+            </div>
+            <div id="laytonTemple">
+                <div class="cards">
+                    <img class="all-images" src="images/LaytonUtahTemple.jpg" alt="Layton Utah Temple">
+                </div>
+            </div>
+        </div>
     </main>
     <!-- FOOTER HERE -->
     <footer>
