--- a/templeinn/contact.html
+++ b/templeinn/contact.html
@@ -48,7 +48,19 @@
 
     <!-- CONTENT HERE -->
     <main>
-        <h2>Contact Us</h2>
+        <div>
+            <div class="page-intro">
+                <h2>Contact Us</h2>
+                <h3>Temple Inn and Suites</h3>
+                <p>4800 Montgomery Ln #300<br>
+                    Bethesda, MD 20814</p>
+                <p>(000)999-9999</p>
+                <p>customerservice@templeinn.com</p>
+            </div>
+            <div>
+                <img src="images/WhiteHotel1.jpg" alt="">
+            </div>
+        </div>
 
     </main>
     <!-- FOOTER HERE -->
