--- a/templeinn/resources.html
+++ b/templeinn/resources.html
@@ -129,6 +129,7 @@
 
             <div>
                 <h3>Contact Page</h3>
+                <a href="https://www.pexels.com/photo/white-and-brown-concrete-building-9645145/">Hotel Picture</a>
             </div>
 
 
