--- a/templeinn/reservations.html
+++ b/templeinn/reservations.html
@@ -52,7 +52,7 @@
             <h2>Make a Reservation</h2>
             <p>Please fill out the form below and submit your reservation request.</p>
         </div>
-        <div id="guestForm">
+        <div class="guestForm">
             <form action="thanks.html">
                 <h3>Guest Information</h3>
                 <div class="formItem">
