--- a/templeinn/resources.html
+++ b/templeinn/resources.html
@@ -130,6 +130,9 @@
             <div>
                 <h3>Contact Page</h3>
                 <a href="https://www.pexels.com/photo/white-and-brown-concrete-building-9645145/">Hotel Picture</a>
+                <a href="https://unsplash.com/photos/RsXA0Z3iWRw">Hotel Picture</a>
+                <a href="https://unsplash.com/photos/_hw4aUQ81ic">Hotel Picture</a>
+                <a href="https://unsplash.com/photos/rA2t29hZj1s">Hotel Garden</a>
             </div>
 
 
